# DE31-3rd_team2

./: .gitignore  =0.14.1  =0.7.0  README.md  hadoop_bigkinds_api_20240701.ipynb  index.html  postgreSQL.sh  pyproject.toml  pyspark3.ipynb
smartCarProject/flume/: READMD.md  data_start.sh  feature.py  flume_start.sh  test.py
smartCarProject/hadoop/: hadoop_client.py  test.py
smartCarProject/hive/: hive.sh
smartCarProject/nifi/: README.md  nifi_client.py  nifi_setup.sh  nitk_setup.sh  state-management.xml  test.py  zookeeper.properties
smartCarProject/nifi/encore1/: nifi.properties
smartCarProject/nifi/encore2/: nifi.properties
smartCarProject/nifi/encore3/: nifi.properties
smartCarProject/redis/: RedisClient.py  redis-settings.env  redis.sh
smartCarProject/spark/: README.md  spark_client.py
smartCarProject/spark/spark_docker/: README.md
smartCarProject/spark/spark_docker/hadoop-conf/: core-site.xml  hdfs-site.xml  mapred-site.xml  yarn-site.xml
smartCarProject/spark/spark_docker/spark_master/: docker-compose.yaml
smartCarProject/spark/spark_docker/spark_submit/: .docker-compose.yaml.swp  docker-compose.yaml
smartCarProject/spark/spark_docker/spark_worker/: docker-compose.yaml
smartCarProject/spark/spark_docker/workspace/: example.py
smartCarProject/spring/smartcar/: HELP.md  pom.xml
smartCarProject/spring/smartcar/src/main/resources/: application.properties
smartCarProject/spring/smartcar/src/main/resources/templates/: index.html
smartCarProject/storm/: README.md  dependency-reduced-pom.xml  pom.xml
(+9 files in other folders)
