[tool.poetry]
name = "git flow init"
version = "0.1.0"
description = ""
authors = ["Rho seokhyun <shtjrgus010@github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyspark = "3.3.0"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools", "wheel"]
build-backend = "poetry.core.masonry.api"
